--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "npx mocha"
+    "test": "./node_modules/.bin/mocha"
   },
   "keywords": [],
   "author": "",
