Fix Heroku fetch depth

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # <-- Fixes the shallow clone issue
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
